# DZ_19.2

./: .env.sample  .gitignore  data.json  pyproject.toml
blog_app/: admin.py  models.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py
blog_app/templates/blog_app/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: command.py
catalog/migrations/: 0001_initial.py  0002_category_created_at.py  0002_version.py  0003_product_owner.py  0004_product_is_published.py  0005_alter_product_is_published.py  0006_alter_product_options.py
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_footer.html  inc_menu.html
catalog/templates/main/: base.html  contacts.html  goods.html  home.html  product.html
catalog/templates/main/includes/: inc_menu.html
catalog/templates/main/templatetags/: my_tags.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html  verified.html
