[tool.poetry]
name = "dz-19-2"
version = "0.1.0"
description = ""
authors = ["Alexandr Lebedev <alexandr.lebedev.sp@gmail.com>"]
readme = "README.md"
packages = [{include = "dz_19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.17.2"
pytils = "^0.4.1"
redis = "^5.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
